--- a/package.json
+++ b/package.json
@@ -1,13 +1,29 @@
 {
-  "name": "autocomplete-input-src",
+  "name": "@mschlege1838/autocomplete-input",
   "version": "1.0.0",
-  "private": true,
-  "description": "Source/Build package for autocomplete-input",
+  "publishConfig": {
+    "access": "public"
+   },
+  "description": "A generic autocomplete input for HTML pages.",
+  "keywords": [
+    "html",
+    "input",
+    "autocomplete"
+  ],
   "author": {
     "name": "Marty Schlegel",
     "email": "martin.schlegel.1838@outlook.com"
   },
   "license": "MIT AND BSD-3-Clause",
+  "browser": "include/autocomplete-input.min.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mschlege1838/autocomplete-input"
+  },
+  "bugs": {
+    "url": "https://github.com/mschlege1838/autocomplete-input/issues",
+    "email": "martin.schlegel.1838@outlook.com"
+  },
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
