--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "publishConfig": {
     "access": "public"
-   },
+  },
   "description": "A generic autocomplete input for HTML pages.",
   "keywords": [
     "html",
@@ -23,6 +23,9 @@
   "bugs": {
     "url": "https://github.com/mschlege1838/autocomplete-input/issues",
     "email": "martin.schlegel.1838@outlook.com"
+  },
+  "scripts": {
+    "prepack": "gulp"
   },
   "devDependencies": {
     "gulp": "^4.0.2",
